--- a/images/codepen-johnfinkdesign-XjkBPE/index.html
+++ b/images/codepen-johnfinkdesign-XjkBPE/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>CodePen - Error Pages</title>
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'><link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <div class="error-page">
@@ -13,6 +13,6 @@
       </div>
     </div>
     <div id="particles-js"></div>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js'></script><script  src="./script.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js'></script><script  src="/script.js"></script>
   </body>
 </html>
