Dropped unsafe image include

--- a/images/codepen-ademilter-hDtpq/index.html
+++ b/images/codepen-ademilter-hDtpq/index.html
@@ -157,7 +157,7 @@
             <div></div>
             <div></div>
         </div>
-        <div class="caps"><img src="http://ademilter.com/caps.png" alt=""></div>
+        <div class="caps"></div>
         <canvas id="canvas"></canvas>
         <script>
             var Application = (function () {
